--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   "bugs": {
     "url": "https://github.com/freight-trust/libedi/issues"
   },
-  "homepage": "https://github.com/freight-trust/libedi#readme"
+  "homepage": "https://github.com/freight-trust/libedi#readme",
+  "devDependencies": {
+    "@release-it/conventional-changelog": "^1.1.4"
+  }
 }
